--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Server"]
 	path = Server
 	url = https://github.com/PrivateHudson1/AI-Knowledge-Api-Server.git
+[submodule "KnowledgeClient"]
+	path = KnowledgeClient
+	url = https://github.com/PrivateHudson1/AI-Knowledge-Client.git
